--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   rclipapi:
     image: ${DOCKER_IMAGE}
     container_name: rclipapi
-    build: api
+    build: .
     environment:
     - REDIS_HOST=rclipredis
     - REDIS_TTL=30
