--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ services:
   rclipredis:
     image: redis:latest
     container_name: rclipredis
-    ports:
-    - '6379:6379'
   rclipapi:
-    image: ${DOCKER_IMAGE}
+    image: ${RCLIPAPI_IMAGE}
     container_name: rclipapi
     build: .
     environment:
