--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
     - REDIS_HOST=rclipredis
     - REDIS_TTL=30
+    - REDIS_TTL_FILE=600
     ports:
     - '80:80'
 
