--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     - REDIS_HOST=rclipredis
     - REDIS_TTL=30
     - REDIS_TTL_FILE=600
+    - KEY_WIDTH=3
     ports:
     - '80:80'
     volumes:
